# deepseek-tide

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deepseek-tide.cmd  install.cmd  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codewhale-watch.yml
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/electron/: auth-status.cjs  auth-status.test.cjs  cache-profile.cjs  cache-profile.test.cjs  main.cjs  preload.cjs  workspace-security.cjs  workspace-security.test.cjs
desktop/qa/: interact.cjs  perf.cjs  readme-shots.cjs  record-demo-en.cjs  record-demo.cjs  seed-empty.cjs  smoke-explain.cjs  snap.cjs  sweep.cjs  verify-delete.cjs  verify-i18n.cjs  verify-newchat.cjs  verify-packaged-userdata.cjs  verify-search.cjs  verify-sections.cjs
desktop/scripts/: generate_icon.py
desktop/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
docs/: launch-posts.md
scripts/: codewhale.ps1  download.py  install-codewhale.ps1
src/whaletide/: __init__.py  agent.py  cli.py  client.py  config.py  policy.py  security.py  session.py  tools.py
tests/: test_agent.py  test_client.py  test_policy.py  test_security.py  test_tools.py
whaletide/: __init__.py
